correct form styling overlaps

--- a/style.css
+++ b/style.css
@@ -223,3 +223,41 @@ h3 {
   color: #36b37e;
   font-size: 15px;
 }
+
+.contact-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.contact-form input {
+  display: block;
+  margin-bottom: 1rem;
+  width: 100%;
+  padding: 0.7rem;
+}
+
+form {
+  margin-top: 1.5rem;
+}
+
+textarea {
+  width: 100%;
+  padding: 0.7rem;
+}
+
+.btns {
+  transform: translateX(40%);
+}
+
+.last-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1.5rem 0;
+}
+
+.email {
+  margin-bottom:2rem;
+}
